[package]
name = "mirror"
version = "0.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.61.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
anyhow = "1.0"
borsh = "0.9"
clap = { version = "3.1.6", features = ["derive", "env"] }
openssl-probe = "0.1.2"
rocksdb = { version = "0.18.0", default-features = false, features = ["snappy", "lz4", "zstd", "zlib"] }
serde = "1"
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.16.1", features = ["rt-multi-thread", "sync", "time"]}
tracing = "0.1.13"

nearcore = { path = "../../nearcore" }
near-chain-configs = { path = "../../core/chain-configs" }
near-client = { path = "../../chain/client" }
near-client-primitives = { path = "../../chain/client-primitives" }
near-indexer = { path = "../../chain/indexer" }
near-network-primitives = { path = "../../chain/network-primitives" }
near-network = { path = "../../chain/network" }
near-primitives = { path = "../../core/primitives" }
near-primitives-core = { path = "../../core/primitives-core" }
near-o11y = { path = "../../core/o11y" }
near-store = { path = "../../core/store" }
near-crypto = { path = "../../core/crypto" }